--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,12 +9,13 @@ jobs:
     steps:
     - name: Checkout master
       uses: actions/checkout@v1
-      with:
-        submodules: true
+      #with:
+        #submodules: true
     - name: Deploy the site
       uses: benmatselby/hugo-deploy-gh-pages@master
       env:
         HUGO_VERSION: 0.60.1
         TARGET_REPO: v9rt3x/v9rt3x.github.io
         TOKEN: ${{ secrets.TOKEN }}
+        HUGO_ARGS: '--gc --minify --cleanDestinationDir'
         CNAME: v9rt3x.github.io
