--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,22 +1,35 @@
-name: Push to GitHub Pages on push to master
+name: Publish Docs
+
 on:
   push:
     branches:
       - master
-
 jobs:
   build:
-    name: Deploy
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout master
-        uses: actions/checkout@v1
 
-      - name: Deploy the site
-        uses: benmatselby/hugo-deploy-gh-pages@master
+    steps:
+      - uses: actions/checkout@v1
+      - name: Checkout
+        uses: actions/setup-node@v1
+        with:
+          node-version: 10.x
+      - name: Setup Hugo
+        uses: peaceiris/actions-hugo@v2.2.1
+        with:
+          hugo-version: '0.60.1'
+      - name: Prepare Hugo
+        run: |
+          git submodule sync && git submodule update --init
+      - name: Build
+        run: |
+          hugo -t aether -d public --gc --minify --cleanDestinationDir
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v2.5.0
+        with:
+          emptyCommits: false
         env:
-          HUGO_VERSION: 0.60.1
-          TARGET_REPO: v9rt3x/v9rt3x.github.io
-          TOKEN: ${{ secrets.TOKEN }}
-          HUGO_ARGS: '-D'
-          CNAME: v9rt3x.github.io
+          PERSONAL_TOKEN: ${{ secrets.TOKEN }}
+          EXTERNAL_REPOSITORY: v9rt3x/v9rt3x.github.io
+          PUBLISH_BRANCH: master
+          PUBLISH_DIR: ./public
