--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://v9rt3x.github.io"
 languageCode = "en"
-title = "Stephan's Blog"
+title = "v9rt3x blog"
 theme = "aether"
 #disqusShortname = "Your shortname for Disqus - optional"
 
@@ -8,5 +8,5 @@ theme = "aether"
 brand = "v9rt3x"
 description = "Music, Programming"
 #homeimg = "URL to the image used for the home button at the bottom of each posts - optional"
-bgimg = "img/ignasi_pattern_s.png"
+#bgimg = "img/ignasi_pattern_s.png"
 #rssinmenu = whether you would like a RSS feed link to appear in the navigation menu (true, false) - optional
